<resources>
    <string name="app_name">Replica Island</string>
    <string name="change_level">Switch Levels</string>
    <string name="test_animation">Test Animation</string>
    <string name="test_diary">Test Diary</string>
    <string name="unlock_levels">Unlock All Levels</string>
    <string name="unlock_next_level">Unlock Next Level</string>
    <string name="method_tracing">Toggle Method Tracing</string>
    <string name="game_over">GAME OVER</string>
    <string name="thanks_for_playing">THANKS FOR PLAYING!</string>
    <string name="please_wait">PLEASE WAIT</string>
    <string name="preference_save_game">Game Data</string>
    <string name="preference_erase_save_game">Erase Saved Game</string>
    <string name="preference_erase_save_game_dialog">Really erase your saved game?  All of your progress will be lost!</string>
    <string name="preference_erase_save_game_dialog_title">Now wait just a minute</string>
    <string name="preference_erase_save_game_dialog_ok">Erase Save</string>
    <string name="preference_erase_save_game_dialog_cancel">Cancel</string>
    <string name="preference_game_settings">Game Settings</string>
    <string name="preference_enable_sound">Enable Sound</string>
    <string name="preference_enable_sound_summary">Disabling sound may improve performance on some devices.</string>
    <string name="preference_safe_mode">Safe Mode</string>
    <string name="preference_safe_mode_summary">Enables safety hacks for broken devices (Cliq, etc), but causes some visual artifacts. Try this if you have problems.</string>
    <string name="preference_configure_controls">Configure Controls</string>
    <string name="preference_enable_click_attack">Click Attack</string>
    <string name="preference_enable_click_attack_summary">Use the trackball click or directional pad center button to attack.</string>
    <string name="preference_enable_screen_controls">On-Screen Controls</string>
    <string name="preference_enable_screen_controls_summary">Displays movement pad and buttons on screen.  Suggested for devices without a d-pad or trackball. Requires mulitouch.</string>
    <string name="preference_enable_tilt_controls">Tilt Controls</string>
    <string name="preference_enable_tilt_controls_summary">EXPERIMENTAL!  Tilt the phone left and right to drive the Android around.  Good for devices with no trackball or d-pad.</string>
    <string name="preference_movement_sensitivity">Motion Sensitivity</string>
    <string name="preference_movement_sensitivity_summary">Adjusts the sensitivity of the trackball, d-pad, or optical sensor.</string>
    <string name="preference_movement_min">Slow</string>
    <string name="preference_movement_max">Fast</string>
    <string name="preference_tilt_sensitivity">Tilt Sensitivity</string>
    <string name="preference_tilt_sensitivity_summary">Adjusts the sensitivity of the tilt controls.</string>
    <string name="preference_tilt_min">Slow</string>
    <string name="preference_tilt_max">Fast</string>
    <string name="preference_key_config">Configure Keyboard</string>
    <string name="preference_key_config_summary">Customize keys for phones with hard keyboards.</string>
    <string name="preference_key_config_dialog_title">Configure Keyboard</string>
    <string name="preference_key_config_dialog_ok">Save</string>
    <string name="preference_key_config_dialog_cancel">Cancel</string>
    <string name="preference_key_config_left">Left</string>
    <string name="preference_key_config_right">Right</string>
    <string name="preference_key_config_jump">Jump</string>
    <string name="preference_key_config_attack">Attack</string>
    <string name="preference_enable_statistics">Report Play Statistics</string>
    <string name="preference_enable_statistics_summary">Sends anonymous play statistics to a server to help us make this game more fun.</string>
    <string name="preference_about">About</string>
    <string name="preference_about_title">About Replica Island</string>
    <string name="preference_about_summary">Replica Island was made by Chris Pruett and Genki Mine, and produced by Tom Moss.</string>
    <string name="preference_visit_site">Go to the Replica Island web site</string>
    <string name="preference_thanks_title">Special Thanks</string>
    <string name="preference_thanks_summary">Special Thanks to Eido Inoue, Casey Richardson, Jason Chen, Tim Mansfield, and the Android Team for their support of this project.</string>
    <string name="preference_licence_title">License</string>
    <string name="preference_licence_summary">Portions of this game are modifications based on work created and shared by Google and used according to terms described in the Creative Commons 3.0 Attribution License.</string>
    <string name="preference_misc">More Information</string>
    <string name="preference_enable_debug">Debug Log</string>
    <string name="preference_enable_debug_summary">Output various logs to logcat.  This option will slow the game down.</string>
    <string name="game_results_title">GAME RESULTS</string>
    <string name="game_results_pearls_collected">PEARLS COLLECTED:</string>
    <string name="game_results_robots_destroyed">ROBOTS DESTROYED:</string>
    <string name="game_results_total_play_time">TOTAL PLAY TIME:</string>
    <string name="game_results_ending">ENDING ACHIEVED:</string>
    <string name="game_results_unlocks_message">You can now access Linear Mode and the Level Select from the Extras menu!</string>
    <string name="game_results_kabocha_ending">BAD ENDING #1 - Kabocha Wins</string>
    <string name="game_results_rokudou_ending">BAD ENDING #2 - Rokudou Wins</string>
    <string name="game_results_wanda_ending">GOOD ENDING - World Saved!</string>
    <string name="game_results_ok_button">Game Over!</string>
    <string name="saved_game_erased_notification">Saved Game Erased</string>
    <string name="quit_game_dialog_title">Quit Game?</string>
    <string name="quit_game_dialog_ok">Quit</string>
    <string name="quit_game_dialog_cancel">Cancel</string>
    <string name="quit_game_dialog_message">Return to main menu?</string>
    <string name="new_game_dialog_title">Start New Game?</string>
    <string name="new_game_dialog_ok">Start New Game</string>
    <string name="new_game_dialog_cancel">Cancel</string>
    <string name="new_game_dialog_message">Starting a new game in this mode will erase your current game in progress.  Are you sure you want to start a new game?</string>
    <string name="extras_locked_dialog_title">Extra Locked!</string>
    <string name="extras_locked_dialog_ok">Get to it!</string>
    <string name="extras_locked_dialog_message">This extra feature is still locked.  Beat the game one time to unlock it!</string>
    <string name="nav_type">Trackball</string>
    <string name="whats_new_dialog_title">Replica Island</string>
    <string name="whats_new_dialog_ok">Rock on!</string>
    <string name="whats_new_dialog_message">Thanks for downloading Replica Island.  Over 1.5 million people have played Replica Island!\n\n
<b>New in this version:</b>\n
- Unlockable extra modes: Linear Story Mode and Level Select.\n
- On-screen controls for devices with no buttons.\n
- Difficulty settings for new games. \n
- Play statistics shown when you finish the game.\n
- Lots of bugs fixed!\n
\n
\n
This is an open source project.  If you are interested in how it works, or would like to use it to make your
own games, check out the source at our web site, replicaisland.net.
\n
\n
Also note that this game sends anonymous play statistics back to a server.  If you’d rather not
allow that, you can turn it off in the options screen.</string>
    <string name="control_setup_dialog_title">Control Setup</string>
    <string name="control_setup_dialog_ok">Leave it this way</string>
    <string name="control_setup_dialog_change">Change control settings</string>
    <string name="control_setup_dialog_message">
Based on your device hardware, the following control scheme has been automatically selected:
&lt;br>
&lt;br>
&lt;small>%1s&lt;/small>
&lt;br>
&lt;br>Replica Island supports many different control configurations.  Control options can be changed at 
any time using the Configure Controls button in Options.
&lt;br>
&lt;br>
Are you ok with the control system selected above, or would you like to set up your control 
settings manually now?</string>
    <string name="control_setup_dialog_trackball">&lt;b>Trackball / Trackpad&lt;/b> - Sensitivity can be adjusted in Options.</string>
    <string name="control_setup_dialog_dpad">&lt;b>Keyboard / Pad&lt;/b> - Key mappings can be changed in Options.</string>
    <string name="control_setup_dialog_screen">&lt;b>On-Screen Pad&lt;/b></string>
    <string name="control_setup_dialog_tilt">&lt;b>Tilt&lt;/b> - Sensitivity can be adjusted in Options.</string>
    <string name="onscreen_tilt_dialog_title">New Control Scheme!</string>
    <string name="onscreen_tilt_dialog_ok">On-Screen Pad</string>
    <string name="onscreen_tilt_dialog_cancel">Stick with Tilt</string>
    <string name="onscreen_tilt_dialog_message">This version of Replica Island adds an option for
<b>On-Screen Controls</b> for multi-touch devices.  Your device supports this new 
mode, but your options are currently set to <b>Tilt</b> controls.  Would you like to try the 
new On-Screen Controls instead, or stick with Tilt? 
\n<small>You can change this setting at any time by choosing Configure Controls under Options.</small>
</string>
    <string name="whats_new_ticker">New in this version: On-screen controls, app-to-sd card support, unlockable extra modes, game statistics after winning, lots of minor (and not so minor) bugs fixed.</string>
    <string name="baby_description">No challenge at all.</string>
    <string name="kids_description">A comfortable ride to the end.</string>
    <string name="adults_description">True accomplishment requires hardship.</string>
    <string name="memory_playback_start">MEMORY PLAYBACK START</string>
    <string name="memory_playback_complete">MEMORY PLAYBACK COMPLETE</string>
    <string name="diary_found">FOUND OLD DIARY</string>
    <string name="Wanda">Wanda</string>
    <string name="Kyle">Kyle</string>
    <string name="Kabocha">Dr. Kabochanomizu</string>
    <string name="Rokudou">Mr. Rokudou</string>
    <string name="Android">Android</string>
    <string name="level_0_1_sewer">Memory #000</string>
    <string name="level_0_2_lab">Memory #001</string>
    <string name="level_0_3_lab">Memory #002</string>
    <string name="level_1_1_island">Memory #003</string>
    <string name="level_1_2_island">Memory #004</string>
    <string name="level_1_3_island">Memory #005</string>
    <string name="level_1_4_island">Memory #006</string>
    <string name="level_1_5_island">Memory #007</string>
    <string name="level_1_6_island">Memory #008</string>
    <string name="level_1_7_island">Memory #009</string>
    <string name="level_1_8_island">Memory #010</string>
    <string name="level_1_9_island">Memory #011</string>
    <string name="level_2_1_grass">Memory #012</string>
    <string name="level_2_2_grass">Memory #013</string>
    <string name="level_2_3_grass">Memory #014</string>
    <string name="level_2_4_grass">Memory #015</string>
    <string name="level_2_5_grass">Memory #016</string>
    <string name="level_2_6_grass">Memory #017</string>
    <string name="level_2_7_grass">Memory #018</string>
    <string name="level_2_8_grass">Memory #019</string>
    <string name="level_2_9_grass">Memory #020</string>
    <string name="level_3_1_sewer">Memory #021</string>
    <string name="level_3_2_sewer">Memory #022</string>
    <string name="level_3_3_sewer">Memory #023</string>
    <string name="level_3_4_sewer">Memory #024</string>
    <string name="level_0_1_sewer_kyle">Memory #024.3</string>
    <string name="s100p">100%</string>
    <string name="zero">0</string>
    <string name="s3_21_34">3:21:34</string>
</resources>