<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/mainMenuBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:gravity="right"
        android:scaleType="fitXY"
        android:src="@drawable/title_background"
        app:tint="#88FFFFFF" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="5sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/game_results_title"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_results_pearls_collected"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <view
                android:id="@+id/pearl_percent"
                class="com.replica.replicaisland.GameOverActivity$IncrementingTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="right"
                android:text="@string/s100p"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_results_robots_destroyed"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <view
                android:id="@+id/enemy_percent"
                class="com.replica.replicaisland.GameOverActivity$IncrementingTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="right"
                android:text="@string/zero"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_results_total_play_time"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <view
                android:id="@+id/total_play_time"
                class="com.replica.replicaisland.GameOverActivity$IncrementingTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="right"
                android:text="@string/s3_21_34"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_results_ending"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/ending"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="right"
                android:text="@string/game_results_kabocha_ending"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/game_results_unlocks_message"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/game_results_ok_button" />
    </LinearLayout>
</FrameLayout>
		